fixed display issues on tablet and phone

--- a/src/SmartRelief/data/main.css
+++ b/src/SmartRelief/data/main.css
@@ -1,15 +1,7 @@
 /* --------------- Main Sidebar Stylings ------------*/
-html {
-    font-size: 400%;
+html { 
+    font-size: 1.5rem;
 }
-
-@media only screen and (min-width: 1000px) {
-    html {
-        font-size: 150%;
-    }
-}
-
-
 
 html,
 body,
